--- a/src/Weather.css
+++ b/src/Weather.css
@@ -5,3 +5,11 @@
 .Weather h1{
     color: gray;
 }
+.WeatherIcon{
+    display: block;
+    text-align: center;
+}
+.WeatherInfo{
+    display: block;
+    text-align: center;
+}
