--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ footer{
   text-align: center;
 }
 @media only screen and (max-width: 480px) {
-  img {
-    width: 100%;
+  body{
+    overflow-x: no-repeat;
   }
 }
