--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,8 @@ footer{
   display: block;
   text-align: center;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
   body{
-    overflow-x: no-repeat;
+    background: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/091/559/original/2102.i518.009_sky_cloud_evening_illustration.jpg?1690670048);
   }
 }
