--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,6 @@ footer{
 @media (max-width: 480px) {
   body{
 
-    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/091/569/original/Green_Blue_Illustration_Green_Hill_Phone_Wallpapaer_%281%29.png?1690677393);
+    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/091/570/original/Green_Blue_Illustration_Green_Hill_Phone_Wallpapaer.jpg?1690677804);
   }
 }
