--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,12 @@
 .Weather{
-    border: 2px double black;
     font: blue;
+}
+.btn{
+    background-image: linear-gradient( 135deg, #F6D242 10%, #FF52E5 100%);
+}
+.form{
+    display: block;
+    text-align: center;
 }
 .Weather h1{
     color: gray;
