--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,6 +4,9 @@
 .btn{
     background-image: linear-gradient( 135deg, #F6D242 10%, #FF52E5 100%);
 }
+.description{
+    text-transform: capitalize;
+}
 .form{
     display: block;
     text-align: center;
