Revised .css and .js

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -25,3 +25,7 @@
 .WeatherTemperature{
     font-size: 40px;
 }
+.card-deck{
+    background: linear-gradient(106.2deg, rgb(0, 186, 217) -4.3%, rgb(121, 134, 204) 14.1%, rgb(150, 117, 206) 34.7%, rgb(186, 105, 200) 53%, rgb(240, 71, 112) 74.7%, rgb(239, 162, 92) 95.6%);
+    border: 5 px;
+}
