--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ button{
 }
 .App {
   font-family: sans-serif;
+  display: block;
   text-align: center;
   margin: 0 auto;
 }
@@ -22,6 +23,7 @@ body {
 h1 {
   display: block;
   text-align: center;
+  color: cornflowerblue;
 }
 h2 {
   display: block;
@@ -56,7 +58,7 @@ border-radius: 20px;
 .search-form {
   display: block;
   padding: 20px;
-  margin-left: 10px;
+  margin-left: 40px;
   margin-top: 20px;
   margin-bottom: 0 auto;
   margin-right: 0 auto;
