--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ button{
 body {
   background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/091/560/original/6863135.jpg?1690670059);
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 h1 {
